Fix mobile menu icon gap

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -109,20 +109,29 @@ body, html {
   transition: all 0.3s ease;
 }
 
+.nav-toggle.open {
+  gap: 0;
+  position: relative;
+}
+
 .nav-toggle.open span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
   width: 20px;
   height: 2px;
   border-radius: 1px;
+  transform: translate(-50%, -50%);
 }
 
 .nav-toggle.open span:nth-child(1) {
-  transform: rotate(45deg);
+  transform: translate(-50%, -50%) rotate(45deg);
 }
 .nav-toggle.open span:nth-child(2) {
   opacity: 0;
 }
 .nav-toggle.open span:nth-child(3) {
-  transform: rotate(-45deg);
+  transform: translate(-50%, -50%) rotate(-45deg);
 }
 
 .nav-menu-mobile {
